--- a/Titanic_Survival_Classification_Using_Logistic_Regression.ipynb
+++ b/Titanic_Survival_Classification_Using_Logistic_Regression.ipynb
@@ -34,7 +34,7 @@
         "id": "QbRex4Tfc4z6"
       },
       "source": [
-        "**Titanic Survival Classification Using Logistic Regression**\n",
+        "# Titanic Survival Classification Using Logistic Regression\n",
         "\n",
         "Link to the dataset can be found [here](https://drive.google.com/drive/folders/1NxCh4X7u7wVo5aHojxjLNs9wC7B7zJhb?usp=sharing). The dataset analyzed is the [RMS Titanic](https://en.wikipedia.org/wiki/RMS_Titanic)."
       ]
